started description section & fixed gaps in bento-grid

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,6 +51,7 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+  font-weight: 400;
 }
 
 /* 9. Improve line wrapping */
@@ -106,12 +107,15 @@ h6 {
   --green: #afe1af;
   --orange: #ffb98a;
   --black: #222222;
-  --grey: #b8b8b9;
+  --grey: #b8b8b990;
   --white: #f5f5f3;
 }
 
 body {
+  --vertical-lines: repeating-linear-gradient(to right, var(--grey) 0 1px, transparent 1px 10px);
+  --horizontal-lines: repeating-linear-gradient(to bottom, var(--grey) 0 1px, transparent 1px 10px);
   background-color: var(--white);
+  background-image: var(--vertical-lines), var(--horizontal-lines);
 }
 
 /* header */
@@ -122,6 +126,7 @@ body {
   justify-content: center;
   padding: 1rem 0 1rem 0;
   border-bottom: 2px solid var(--black);
+  background-color: var(--white);
 }
 
 .header__title {
@@ -153,6 +158,7 @@ body {
   border: 0.5px solid #0f0f0e;
   box-shadow: 0px 2px 2px #888;
   padding: 0.33rem;
+  background-color: var(--white);
 }
 
 a:hover {
@@ -167,11 +173,46 @@ a:hover {
   font-family: "Geist Mono", Helvetica, sans-serif;
 }
 
+/* description section */
+.web-description {
+  padding: 1rem 0 1rem 0;
+  margin: 0 1rem 0 1rem;
+}
+
+.description-question {
+  background-color: var(--white);
+  width: fit-content;
+}
+
+.description-answer {
+  background-color: var(--white);
+  width: fit-content;
+}
+
+.examples {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.description-example {
+  background-color: var(--white);
+  margin-top: 1rem;
+  border: 0.5px solid var(--black);
+}
+
+.description-icon {
+  width: 40px;
+  height: 40px;
+}
+
 /* bento-grid & bento-cards */
 .bento-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   border-collapse: separate;
+  gap: 1rem;
+  margin: 0 1rem 0 1rem;
 }
 
 .card * {
@@ -180,19 +221,9 @@ a:hover {
 
 .card {
   border-collapse: collapse;
-  padding: 2rem;
+  padding: 1rem;
   border: 0.5px solid var(--black);
-}
-
-/* corrección de border-collapse*/
-
-.nav__menu + .card {
-  border-top: none;
-}
-
-.card + .card {
-  border-left: none;
-  border-top: none;
+  background-color: var(--white);
 }
 
 .card-header {
@@ -226,4 +257,11 @@ a:hover {
 
 .card-insight {
   font-size: small;
+}
+
+/* footer */
+
+.donate-icon {
+  width: 20px;
+  height: 20px;
 }
